--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,7 +1,7 @@
 <% @messages.each do |message| %>
 	<div class="col-md-4">
 		<div class="message">
-			<h2 class="message-title"><%= message.title %></h2>
+			<h2 class="message-title"><%= format_title(message.title) %></h2>
 			<%= link_to "View Message", message, class: "btn-custom" %>
 		</div>
 	</div>
