--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-8 col-md-offset-2">
 	<div class="message-show">
-		<h2><%= @message.title %></h2>
+		<h2><%= format_title(@message.title) %></h2>
 		<p class="message-posted-by">Posted by <%= username(@message.user) %> <%= time_ago_in_words(@message.created_at) %> ago</p>
 		<p class="message-desc"><%= @message.description %></p>
 		<!-- Add a Posted By: username at timestamp. -->
