--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -9,10 +9,13 @@
     <!-- renders the _comment.html.erb partial file. -->
     <p><%= render @message.comments %></p>
 
-    <h3 class="reply-to-msg">Reply to Message:</h3>
     <!-- renders the comments form -->
-    <%= render 'comments/form' %>
-
+    <% if user_signed_in? %>
+      <h3 class="reply-to-msg">Reply to Message:</h3>
+      <%= render 'comments/form' %>
+    <% else %>
+      <p>Please <%= link_to "Log In", new_user_session_path %> or <%= link_to "Sign Up", new_user_registration_path %> to comment.</p>
+    <% end %>
 
     <!-- Add a conditional so that the 'edit' and 'destroy' links only appear for the user who created the message. -->
     <div class="links btn-group">
